--- a/app.json
+++ b/app.json
@@ -12,7 +12,7 @@
 		"small": "/assets/images/small.png"
 	},
 	"category": "appliances",
-	"version": "1.0.0",
+	"version": "0.1.0",
 	"compatibility": ">=1.5.0",
 	"author": {
 		"name": "Athom B.V.",
@@ -23,6 +23,10 @@
 			"id": "oven",
 			"name": {
 				"en": "Oven"
+			},
+			"images": {
+				"large": "/drivers/oven/assets/images/large.png",
+				"small": "/drivers/oven/assets/images/small.png"
 			},
 			"class": "oven",
 			"capabilities": [ "measure_temperature", "alarm_contact" ],
